# sqlpp-connector-odbc2

./: .gitignore  CMakeLists.txt  README.md
include/sqlpp11/odbc2/: bind_result.h  char_result.h  char_result_row.h  connection.h  connection_config.h  odbc2.h  prepared_statement.h
include/sqlpp11/skeleton/: char_result.h
src/: CMakeLists.txt  bind_result.cpp  char_result.cpp  connection.cpp  enumMeta.h  prepared_statement.cpp
src/detail/: connection_handle.cpp  connection_handle.h  odbc_defines.h  prepared_statement_handle.h  result_handle.h
testotl/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  SkeletonTest.cpp  TabSample.sql  ddl2cpp  demo.h
